# clockworkhero

./: .gitignore  ClockworkHero_SDD_v1.0.md  LICENSE  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: 01_architektur.md  03_feature_ideen.md  04_roadmap.md  05_auto_update_einrichten.md  README.md
src/: App.css  App.css.bak  App.tsx  App.tsx.bak  types.ts  types.ts.bak
src-tauri/: 2  Cargo.toml  Cargo.toml.bak  tauri.conf.json
src-tauri/capabilities/: default.json  default.json.bak
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  main.rs.bak
src/components/: ActivityDetailModal.tsx  ActivityDetailModal.tsx.bak  ActivityOverlay.tsx  AppIcon.tsx  AppIcon.tsx.bak  CalendarEngine.tsx  CalendarEngine.tsx.bak  Dashboard.tsx  Dashboard.tsx.bak  ErrorBoundary.tsx  EventRenderer.tsx  EventRenderer.tsx.bak  SessionModal.tsx  SessionModal.tsx.bak  SessionsPanel.tsx  SettingsModal.tsx  SettingsModal.tsx.bak  ShortcutsModal.tsx  Toast.tsx  UpdateChecker.tsx  WorkScheduleEditor.tsx
src/components/settings/: GeneralTab.tsx  ProjectsTab.tsx
src/hooks/: useAppInit.ts  useCalendarData.ts  useKeyboardShortcuts.ts  useTimer.ts
src/services/: analyticsService.ts  analyticsService.ts.bak  db.ts  db.ts.bak  exportService.ts  exportService.ts.bak
src/utils/: imageUtils.ts  imageUtils.ts.bak
