[package]
name = "clockworkhero"
version = "0.9.11"
description = "ClockworkHero - Zeiterfassung und Aktivitätstracking"
authors = ["you"]
edition = "2021"

[lib]
name = "clockworkhero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# WICHTIG: Hier haben wir "tray-icon" und "image-png" hinzugefügt
tauri = { version = "2.10", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2"


# Bildverarbeitung
base64 = "0.21"
image = "0.24"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
]
